# ReacticeEffector

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  README.md  ReacticeEffector.ioc  ReactiveEffector.ioc  STM32F745VGTX_FLASH.ld  build.sh
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
User/: constant.h  neo_pixel.cpp  neo_pixel.h  user.cpp  user.h
User/common/: alloc.hpp  big_endian.hpp  dma_mem.cpp  dma_mem.h  little_endian.hpp  mutex.hpp  rgb.h  utils.h
User/device/: at42qt1070.cpp  at42qt1070.h  fonts.cpp  fonts.h  gyro.cpp  gyro.h  i2c.cpp  i2c.h  i2c_device_base.hpp  icm20602.h  level_meter.cpp  level_meter.h  mpu6050.h  neo_pixel.cpp  neo_pixel.h  pca9555.cpp  pca9555.h  pca9635.cpp  pca9635.h  rotary_encoder.cpp  rotary_encoder.h  ssd1306.cpp  ssd1306.h
User/effector/: autowah.hpp  booster.hpp  bq_filter.hpp  bypass.hpp  chorus.hpp  common.h  compressor.hpp  delay.hpp  delay_base.hpp  delay_ram.hpp  delay_spi.hpp  distortion.hpp  effector_base.h  effector_template.hpp  id.h  lib_calc.hpp  lib_delay.hpp  lib_filter.hpp  lib_osc.hpp  oscillator.hpp  overdrive.hpp  phaser.hpp  pop_noise_reductor.hpp  reverb.hpp  table_dbToGain.h  tiny_fuzz.hpp  tremolo.hpp  tuner.cpp  tuner.h
User/effector/lib/: lib_calc.hpp  lib_delay.hpp  lib_delay_spi.hpp  lib_filter.hpp  lib_float.hpp  lib_osc.hpp  table_dbToGain.h
User/interrupt/: dma_irq.cpp  exti_irq.cpp  peripheral_irq.cpp  timer_irq.cpp
User/message/: error.h  msglib.cpp  msglib.h  type.h
User/peripheral/: i2c.cpp  i2c.h  spi_master.cpp  spi_master.h
User/state/: common.cpp  common.h  effect_edit.cpp  effect_edit.h  error.cpp  error.h  factory_reset.cpp  factory_reset.h  patch_edit.cpp  patch_edit.h  playing.cpp  playing.h  property.cpp  property.h  state_base.h  tuner.cpp  tuner.h
User/task/: adc_task.cpp  adc_task.h  app_task.cpp  app_task.h  handles.h  i2c_monitor_task.cpp  i2c_monitor_task.h  i2c_task.cpp  i2c_task.h  neo_pixel_task.cpp  neo_pixel_task.h  sound_task.cpp  sound_task.h  uart_task.cpp  usb_task.cpp  usb_task.h
User/task/app_state/: effect_edit.cpp  effect_edit.h  error.cpp  error.h  factory_reset.cpp  factory_reset.h  patch_edit.cpp  patch_edit.h  playing.cpp  playing.h  property.cpp  property.h  state_base.h
cmake/: CMakeLists.txt  STM32F745VGTX_FLASH.ld
doc/: .gitignore
doc/asciidoc/: config.rb  theme.yml
doc/doxygen/: Doxyfile
doc/manual/: manual_button_table.xlsx
doc/rtos_message/: Gemfile  main.adoc  rakefile
